# FabCLI

./: .gitignore  .gitmodules  Cargo.toml  FAQ.md  README.md  about.hbs  about.toml  deny.toml
.github/workflows/: release.yml
src/: auth_webview.rs  config.rs  download.rs  download_resolver.rs  error.rs  fab_browser.rs  fab_session.rs  fab_sso_webview.rs  library_cache.rs  main.rs  output.rs  session.rs  session_warn.rs  state.rs  token_storage.rs  update_check.rs
src/cli/: auth.rs  claim_batch.rs  fab.rs  mod.rs  skill.rs  update.rs
src/fab_daemon/: client.rs  log.rs  mod.rs  protocol.rs  script.rs  server.rs
src/webview_host/: linux_host.rs  mod.rs  stub_host.rs  windows_host.rs
tests/: cli.rs
